--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   height: calc( 100vh - 32px );
   width: calc( 100vw - 32px );
   display: grid;
-  grid-auto-columns: 1fr 1fr;
+  grid-auto-columns: 1fr;
   grid-column-gap: 8px;
   padding: 16px;
 }
